--- a/app/.env.example
+++ b/app/.env.example
@@ -1,3 +1,4 @@
 SERVER_URL=http://localhost:6060
 VITE_COGNITO_CLIENT_ID=
 VITE_COGNITO_REDIRECT_URI=http://localhost:4040/signin
+VITE_HUU_API_BASE_URL=http://localhost:4040/api/
