--- a/api/requirements-dev.txt
+++ b/api/requirements-dev.txt
@@ -36,7 +36,11 @@ click==8.1.7
 clickclick==20.10.2
     # via connexion
 colorama==0.4.6
-    # via tox
+    # via
+    #   build
+    #   click
+    #   pytest
+    #   tox
 connexion==2.13.1
     # via homeuniteus-api (pyproject.toml)
 coverage==7.3.0
@@ -53,7 +57,6 @@ flask==2.2.5
     # via
     #   connexion
     #   flask-testing
-    #   homeuniteus-api (pyproject.toml)
 flask-testing==0.8.1
     # via homeuniteus-api (pyproject.toml)
 greenlet==2.0.2
@@ -96,6 +99,8 @@ markupsafe==2.1.3
     #   jinja2
     #   mako
     #   werkzeug
+marshmallow==3.20.1
+    # via homeuniteus-api (pyproject.toml)
 openapi-schema-validator==0.6.0
     # via openapi-spec-validator
 openapi-spec-validator==0.6.0
@@ -104,6 +109,7 @@ packaging==23.1
     # via
     #   build
     #   connexion
+    #   marshmallow
     #   prance
     #   pyproject-api
     #   pytest
