--- a/api/requirements-dev.txt
+++ b/api/requirements-dev.txt
@@ -36,7 +36,11 @@ click==8.1.7
 clickclick==20.10.2
     # via connexion
 colorama==0.4.6
-    # via tox
+    # via 
+    #   build
+    #   click
+    #   pytest
+    #   tox
 connexion==2.14.2
     # via homeuniteus-api (pyproject.toml)
 coverage==7.3.0
