updating function name to avoid collision with sqlalchemy

--- a/api/openapi_server/openapi/paths/users.yaml
+++ b/api/openapi_server/openapi/paths/users.yaml
@@ -1,6 +1,6 @@
 delete:
   description: Delete a specific user
-  operationId: delete
+  operationId: delete_user
   tags:
     - users
   parameters:
