adds get user by email endpoint

--- a/api/openapi_server/openapi/parameters/_index.yaml
+++ b/api/openapi_server/openapi/parameters/_index.yaml
@@ -8,3 +8,11 @@ ProviderId:
     type: integer
     format: int64
   style: simple
+Email:
+  name: user_email
+  description: The email of the user to retrieve
+  in: path
+  required: true
+  schema:
+    type: string
+  style: simple
