Introduce 'debug' and 'release' pytest CLI args. Run debug by default - You can now use `pytest`, `pytest --mode=debug` or `pytest --mode=release` - Update tox to run the debug by default, but allow release tests to be run using 'tox -e releasetest`

--- a/api/tox.ini
+++ b/api/tox.ini
@@ -4,10 +4,14 @@ env_list =
 minversion = 4.6.4
 
 [testenv]
-description = run the tests with pytest
+description = run tests with mocking using pytest
 package = sdist
 deps =
     -r{toxinidir}/requirements-dev.txt
 commands =
-    pytest {tty:--color=yes} {posargs} --cov=openapi_server
+    pytest {toxinidir}/openapi_server/test {tty:--color=yes} {posargs} --cov=openapi_server --mode=debug
 
+[testenv:releasetest]
+description = run tests without mocking using pytest
+commands =
+    pytest {toxinidir}/openapi_server/test {tty:--color=yes} {posargs} --cov=openapi_server --mode=release
