--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -28,10 +28,10 @@ jobs:
       - name: Install API dev Dependencies
         run: |
           pip install -r requirements-dev.txt
-#      - name: Test with tox
-#        run: |
-#          # Use tox because it is configured to test against the same package type being deployed
-#          tox
+      - name: Test with tox
+        run: |
+          # Use tox because it is configured to test against the same package type being deployed
+          tox
   test-app:
     runs-on: ubuntu-latest
     defaults:
