Add example production configuration and rename staging example to .env

--- a/api/.env.staging.example
+++ b/api/.env.staging.example
@@ -11,4 +11,5 @@ COGNITO_USER_POOL_ID=
 SECRET_KEY=
 COGNITO_ACCESS_ID=
 COGNITO_ACCESS_KEY=
-ROOT_URL=http://localhost:4040
+DATABASE_URL=
+ROOT_URL=https://dev.homeunite.us
