Typo, add extra validation, remove unused config option - The Use hot reloading option is enabled by default when FLASK_DEBUG is set to True

--- a/api/.env.prod.example
+++ b/api/.env.prod.example
@@ -1,7 +1,7 @@
 # Production configuration does not allow mocking, debugging
 # or testing. Configuration values are strictly validated where possible.
 # The following values are required for staging config.
-# See StagingHUUConfig for all options.
+# See ProductionHUUConfig for all options.
 ENV='production'
 COGNITO_CLIENT_ID=
 COGNITO_CLIENT_SECRET=
