--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "cypress:open": "cypress open",
+    "cypress:open": "cypress open --env USE_MOCK=true",
+    "cypress:open:nomock": "cypress open --env USE_MOCK=false",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "lint": "eslint . --ext ts --ext tsx --max-warnings 0",
