--- a/.github/workflows/build-deploy-ec2.yml
+++ b/.github/workflows/build-deploy-ec2.yml
@@ -2,6 +2,12 @@ name: Build and Deploy to EC2
 # workflow_dispatch means this workflow is manually triggered.
 # The user will select the branch or tag from the GitHub UI to run this workflow against.
 on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches: 
+      - main
   workflow_dispatch:
 jobs:
   run-tests:
@@ -75,6 +81,8 @@ jobs:
   deploy-api-app:
     needs: [build-api, build-app]
     runs-on: ubuntu-latest
+    # Only one deployment job should run at a time because it updates the EC2 instance destructively
+    concurrency: deploy-one-at-a-time
     steps:
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
