Key fix. Update API request to be same-origin & use actual API URL - The API requests are always recognized as a same-origin request if made to /api instead of VITE_HUU_API_BASE_URL. Even if the API base URL points to localhost vs 127.0.0.1 - Now that we are making this change, we don't need to set changeOrigin on the proxy - Before VITE_HUU_API_BASE_URL pointed to port 4040, but that is the proxy location. True location is 8080 - Fix bug in tsconfig. That "baseURL" was not being used

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
+    "baseUrl": "./",
     "useDefineForClassFields": true,
     "lib": ["es6", "DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
@@ -21,8 +22,7 @@
       "@testing-library/jest-dom",
       "cypress",
       "@testing-library/cypress"
-    ],
-    "baseUrl": "http://localhost:3000"
+    ]
   },
   "include": ["src", "*.ts"],
   "references": [{"path": "./tsconfig.node.json"}]
