Correct session related endpoint spec and add backend auth tests - Expand frontend tests to handle changes to OpenAPI spec & add another test case - Add backend test suite class that skips when mocking is disabled. The authentication system is currently disabled in debug mode

--- a/api/openapi_server/openapi/parameters/_index.yaml
+++ b/api/openapi_server/openapi/parameters/_index.yaml
@@ -8,3 +8,10 @@ ProviderId:
     type: integer
     format: int64
   style: simple
+SessionCookie:
+      in: cookie
+      name: session
+      schema:
+        type: string
+      required: true
+      description: Session ID provided in a session cookie.
