--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,9 @@
   "name": "home-unite-us",
   "private": true,
   "version": "1.0.0",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -15,7 +18,9 @@
     "type-check": "npx tsc --noEmit",
     "prepare": "cd .. && husky install app/.husky",
     "pre-commit": "lint-staged",
-    "generate": "npx @rtk-query/codegen-openapi openapi-config.ts"
+    "generate": "npx @rtk-query/codegen-openapi openapi-config.ts",
+    "check-node-version": "node check-node-version.mjs",
+    "preinstall": "npm run check-node-version"
   },
   "author": "",
   "license": "ISC",
@@ -36,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "semver": "^7.5.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
