--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -40,10 +40,10 @@ jobs:
         working-directory: ./app
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js 20.x
+      - name: Use Node.js LTS
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: 'lts/*'
           cache: 'npm'
           cache-dependency-path: app/package-lock.json
       - name: Run npm CI
