Update requets body and arguments for reset password end point

--- a/api/openapi_server/openapi/paths/auth/authInitialInvite.yaml
+++ b/api/openapi_server/openapi/paths/auth/authInitialInvite.yaml
@@ -7,16 +7,16 @@ post:
         schema:
           type: object
           properties:
-            email:
+            userId:
               type: string
             password:
               type: string
-            session:
+            sessionId:
               type: string
           required:
-            - email
+            - userId
             - password
-            - session
+            - sessionId
   responses:
     "200":
       content:
