Add moto[cognito-idp] as a development dependency

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -128,6 +128,8 @@ dev = [
 
   # pip-tools provides the tools pip-compile and pip-sync to help manage requirements files
   "pip-tools",
+
+  "moto[cognito-idp]",
 ]
 
 # This defines the "prod" extra dependency group.
