--- a/api/requirements-dev.txt
+++ b/api/requirements-dev.txt
@@ -11,10 +11,13 @@ attrs==23.1.0
     #   jsonschema
     #   referencing
 boto3==1.22.10
-    # via homeuniteus-api (pyproject.toml)
+    # via
+    #   homeuniteus-api (pyproject.toml)
+    #   moto
 botocore==1.25.13
     # via
     #   boto3
+    #   moto
     #   s3transfer
 build==0.10.0
     # via pip-tools
@@ -22,6 +25,8 @@ cachetools==5.3.1
     # via tox
 certifi==2023.7.22
     # via requests
+cffi==1.16.0
+    # via cryptography
 chardet==5.2.0
     # via
     #   prance
@@ -36,7 +41,7 @@ click==8.1.7
 clickclick==20.10.2
     # via connexion
 colorama==0.4.6
-    # via 
+    # via
     #   build
     #   click
     #   pytest
@@ -45,6 +50,8 @@ connexion==2.14.2
     # via homeuniteus-api (pyproject.toml)
 coverage==7.3.0
     # via pytest-cov
+cryptography==41.0.7
+    # via moto
 distlib==0.3.7
     # via virtualenv
 exceptiongroup==1.1.3
@@ -74,6 +81,7 @@ itsdangerous==2.1.2
 jinja2==3.1.2
     # via
     #   flask
+    #   moto
     #   swagger-ui-bundle
 jmespath==1.0.1
     # via
@@ -100,6 +108,8 @@ markupsafe==2.1.3
     #   mako
     #   werkzeug
 marshmallow==3.20.1
+    # via homeuniteus-api (pyproject.toml)
+moto==4.2.10
     # via homeuniteus-api (pyproject.toml)
 openapi-schema-validator==0.6.0
     # via openapi-spec-validator
@@ -130,6 +140,8 @@ prance==23.6.21.0
     # via homeuniteus-api (pyproject.toml)
 psycopg2-binary==2.9.5
     # via homeuniteus-api (pyproject.toml)
+pycparser==2.21
+    # via cffi
 pyproject-api==1.5.4
     # via tox
 pyproject-hooks==1.0.0
@@ -144,7 +156,9 @@ pytest-cov==4.0.0
 pytest-randomly==3.12.0
     # via homeuniteus-api (pyproject.toml)
 python-dateutil==2.8.2
-    # via botocore
+    # via
+    #   botocore
+    #   moto
 python-dotenv==0.20.0
     # via homeuniteus-api (pyproject.toml)
 pyyaml==6.0.1
@@ -152,6 +166,7 @@ pyyaml==6.0.1
     #   clickclick
     #   connexion
     #   jsonschema-spec
+    #   responses
 referencing==0.30.2
     # via
     #   jsonschema
@@ -161,7 +176,11 @@ requests==2.31.0
     # via
     #   connexion
     #   jsonschema-spec
+    #   moto
     #   prance
+    #   responses
+responses==0.24.1
+    # via moto
 rfc3339-validator==0.1.4
     # via openapi-schema-validator
 rpds-py==0.9.2
@@ -202,14 +221,18 @@ urllib3==1.26.18
     # via
     #   botocore
     #   requests
+    #   responses
 virtualenv==20.24.3
     # via tox
 werkzeug==2.2.3
     # via
     #   connexion
     #   flask
+    #   moto
 wheel==0.41.2
     # via pip-tools
+xmltodict==0.13.0
+    # via moto
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
