--- a/api/requirements-dev.txt
+++ b/api/requirements-dev.txt
@@ -51,9 +51,15 @@ connexion==2.14.2
 coverage==7.3.0
     # via pytest-cov
 cryptography==41.0.7
-    # via moto
+    # via
+    #   moto
+    #   python-jose
 distlib==0.3.7
     # via virtualenv
+ecdsa==0.18.0
+    # via
+    #   moto
+    #   python-jose
 exceptiongroup==1.1.3
     # via pytest
 filelock==3.12.2
@@ -140,6 +146,10 @@ prance==23.6.21.0
     # via homeuniteus-api (pyproject.toml)
 psycopg2-binary==2.9.5
     # via homeuniteus-api (pyproject.toml)
+pyasn1==0.5.1
+    # via
+    #   python-jose
+    #   rsa
 pycparser==2.21
     # via cffi
 pyproject-api==1.5.4
@@ -161,6 +171,8 @@ python-dateutil==2.8.2
     #   moto
 python-dotenv==0.20.0
     # via homeuniteus-api (pyproject.toml)
+python-jose==3.3.0
+    # via moto
 pyyaml==6.0.1
     # via
     #   clickclick
@@ -187,6 +199,8 @@ rpds-py==0.9.2
     # via
     #   jsonschema
     #   referencing
+rsa==4.9
+    # via python-jose
 ruamel-yaml==0.17.32
     # via prance
 ruamel-yaml-clib==0.2.7
@@ -195,6 +209,7 @@ s3transfer==0.5.2
     # via boto3
 six==1.16.0
     # via
+    #   ecdsa
     #   prance
     #   python-dateutil
     #   rfc3339-validator
