--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -37,6 +37,7 @@ jobs:
           COGNITO_ACCESS_ID: ${{ secrets.COGNITO_ACCESS_ID }}
           COGNITO_ACCESS_KEY: ${{ secrets.COGNITO_ACCESS_KEY }}
         run: |
+          echo "COGNITO_REGION set"
           tox -e releasetest
   test-app:
     runs-on: ubuntu-latest
