--- a/api/tox.ini
+++ b/api/tox.ini
@@ -13,6 +13,6 @@ commands =
 
 [testenv:releasetest]
 description = run tests without mocking using pytest
-passenv = COGNITO_REGION COGNITO_ACCESS_ID COGNITO_ACCESS_KEY
+passenv = COGNITO_REGION,COGNITO_ACCESS_ID,COGNITO_ACCESS_KEY
 commands =
     pytest {tty:--color=yes} {posargs} --cov=openapi_server --mode=release
