Rename signin to sign_in to follow PEP8

--- a/api/openapi_server/openapi/paths/auth/authSignin.yaml
+++ b/api/openapi_server/openapi/paths/auth/authSignin.yaml
@@ -1,6 +1,6 @@
 post:
   description: Sign in a user
-  operationId: signin
+  operationId: sign_in
   requestBody:
     content:
       application/json:
