--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -65,7 +65,7 @@ jobs:
         run: docker run api:latest pytest    
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build-api, build-app]
     if: >-
       (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
       (github.event_name == 'workflow_dispatch' && github.event.inputs.deploy)
