Add App testing image to allow running cypress w/in container

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,7 @@
 # Named temprorary image to build client bundles
 FROM node:lts-alpine as builder
+ARG VITE_HUU_API_BASE_URL
+ENV VITE_HUU_API_BASE_URL=${VITE_HUU_API_BASE_URL}
 
 # do all copies/builds within a subdirectory
 WORKDIR /app
@@ -7,14 +9,23 @@ WORKDIR /app
 # move source files into image
 COPY . ./
 
-# client package install
+# Only install non-development dependencies
 RUN npm install
 
 # generate bundles from source
 RUN npm run build
 
+# Testing image
+FROM cypress/base as development
+WORKDIR /app
+
+# Copy built assets and all source files from builder
+COPY --from=builder /app .
+RUN npx cypress install
+ENTRYPOINT ["/bin/sh", "-c"]
+
 # Runtime image
-FROM nginx
+FROM nginx as production
 
 # Copy client build to runtime image
 COPY --from=builder /app/dist /usr/share/nginx/html/
@@ -28,4 +39,4 @@ RUN if [ -e "nginx.conf" ]; then \
 #    publish to a different port at Docker 
 #    runtime environment level
 EXPOSE 80
-
+ENTRYPOINT ["/bin/sh", "-c"]
