--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -23,9 +23,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: docker/setup-buildx-action@v1
       - name: Build API Image
-        run: docker build -t api:latest ./api
-      - name: Save API Image
-        run: docker save api:latest -o api_image.tar
+        run: |
+          docker build -t api:latest ./api
+          docker save api:latest -o api_image.tar
       - uses: actions/upload-artifact@v3
         with:
           name: api_image
@@ -36,10 +36,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: docker/setup-buildx-action@v1
-      - name: Build Image
-        run: docker build -t app:latest ./app
-      - name: Save Image
-        run: docker save app:latest -o app_image.tar
+      - name: Build Testing Image
+        run: |
+          docker build --build-arg VITE_HUU_API_BASE_URL=http://127.0.0.1:8080/api --target test --tag app:latest-test ./app
+          docker save app:latest-test -o app_test_image.tar
+      - name: Build Production Image
+        run: |
+          docker build --build-arg VITE_HUU_API_BASE_URL=http://127.0.0.1:8080/api --target production --tag app:latest ./app
+          docker save app:latest -o app_image.tar
+      - uses: actions/upload-artifact@v3
+        with:
+          name: app_test_image
+          path: app_test_image.tar
+          retention-days: 7
       - uses: actions/upload-artifact@v3
         with:
           name: app_image
@@ -53,7 +62,6 @@ jobs:
       github.event.pull_request ||
       (github.event_name == 'workflow_dispatch' && github.event.inputs.test)
     steps:
-      - uses: actions/checkout@v2
       - name: Download API Image Artifact
         uses: actions/download-artifact@v3
         with:
@@ -62,7 +70,23 @@ jobs:
       - name: Load API Image
         run: docker load -i api_image.tar
       - name: Run Debug Tests
-        run: docker run api:latest pytest    
+        run: docker run api:latest pytest
+      - name: Run Release Tests
+        run: docker run api:latest "pytest mode=release"
+  test-app:
+    runs-on: ubuntu-latest
+    needs: [build-app, build-api]
+    steps:
+      - name: Download API Image Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: api_image
+          path: .
+      - name: Load API Image
+        run: docker load -i api_image.tar
+      - name: Start backend for e2e tests
+        run: docker run -p 8080:8080 -e VITE_HUU_API_BASE_URL=http://127.0.0.1:8080/api api:latest
+      
   deploy:
     runs-on: ubuntu-latest
     needs: [build-api, build-app]
