--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: docker/setup-buildx-action@v1
       - name: Build Testing Image
         run: |
-          docker build --build-arg VITE_HUU_API_BASE_URL=http://127.0.0.1:8080/api --target test --tag app:latest-test ./app
+          docker build --build-arg VITE_HUU_API_BASE_URL=http://127.0.0.1:8080/api --target development --tag app:latest-test ./app
           docker save app:latest-test -o app_test_image.tar
       - name: Build Production Image
         run: |
@@ -72,7 +72,7 @@ jobs:
       - name: Run Debug Tests
         run: docker run api:latest pytest
       - name: Run Release Tests
-        run: docker run api:latest "pytest mode=release"
+        run: docker run api:latest "pytest --mode=release"
   test-app:
     runs-on: ubuntu-latest
     needs: [build-app, build-api]
@@ -84,9 +84,22 @@ jobs:
           path: .
       - name: Load API Image
         run: docker load -i api_image.tar
-      - name: Start backend for e2e tests
-        run: docker run -p 8080:8080 -e VITE_HUU_API_BASE_URL=http://127.0.0.1:8080/api api:latest
-      
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
+        with:
+          env: USE_MOCK=true
+          start: docker run -p 8080:8080 -e VITE_HUU_API_BASE_URL=http://127.0.0.1:8080/api app:latest
+          wait-on: 'http://localhost:8080'
+      - name: Cypress no mocking test run
+        uses: cypress-io/github-action@v6
+        with:
+          env: USE_MOCK=false
+          start: |
+            docker run -p 4040:4040 api:latest "python -m openapi_server"
+            docker run -p 8080:8080 -e VITE_HUU_API_BASE_URL=http://127.0.0.1:8080/api app:latest
+          wait-on: |
+            'http://localhost:4040'
+            'http://localhost:8080'
   deploy:
     runs-on: ubuntu-latest
     needs: [build-api, build-app]
