--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -81,6 +81,20 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-app, build-api]
     steps:
+      - name: Download API Images
+        uses: actions/download-artifact@v3
+        with:
+          name: api_image
+          path: .
+      - name: Download App Images
+        uses: actions/download-artifact@v3
+        with:
+          name: app_image
+          path: .
+      - name: Load Images
+        run: |
+          docker load -i api_image.tar
+          docker load -i app_image.tar
       - name: Launch networked test application
         run: |
           docker network create huu-test-network
