--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -122,16 +122,16 @@ jobs:
       - name: Print microservice logs
         if: always()
         run: |
-          docker log frontend_mock
-          docker log backend
-          docker log frontend_mock
+          docker logs frontend_mock
+          docker logs backend
+          docker logs frontend_nomock
       - name: Stop Backend and Frontend Containers
         if: always()
         run: |
           docker stop backend frontend_mock frontend_nomock
   deploy:
     runs-on: ubuntu-latest
-    needs: [build-api, build-app]
+    needs: [build-api, build-app, test-app]
     if: >-
       (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
       (github.event_name == 'workflow_dispatch' && github.event.inputs.deploy)
