May I please log into the GH Container Registry 🙏

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,7 @@
 # TODO: Run the openapi_server with nginx as reverse proxy and gunicorn as WSGI server
 FROM python:3.10-alpine
 
-RUN apk update && apk add build-base
+RUN apk update && apk add build-base && apk add curl
 
 RUN mkdir -p /opt/HomeUniteUs/api
 WORKDIR /opt/HomeUniteUs/api
