--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -17,7 +17,7 @@ on:
         required: true
         default: false
 jobs:
-  test-gh-repo:
+  build-api:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -33,44 +33,6 @@ jobs:
           IMAGE_NAME=ghcr.io/hackforla/homeuniteus/api:latest
           docker build -t $IMAGE_NAME ./api
           docker push $IMAGE_NAME
-  test-api-gh-repo:
-    runs-on: ubuntu-latest
-    needs: [test-gh-repo]
-    if: >-
-      github.event_name == 'push' ||
-      github.event.pull_request ||
-      (github.event_name == 'workflow_dispatch' && github.event.inputs.test)
-    env:
-      COGNITO_REGION: ${{ secrets.COGNITO_REGION }}
-      COGNITO_ACCESS_ID: ${{ secrets.COGNITO_ACCESS_ID }}
-      COGNITO_ACCESS_KEY: ${{ secrets.COGNITO_ACCESS_KEY }}
-    steps:
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Pull API Image
-        run: docker pull ghcr.io/hackforla/homeuniteus/api:latest
-      - name: Run Debug Tests
-        run: docker run ghcr.io/hackforla/homeuniteus/api:latest pytest
-      - name: Run Release Tests
-        run: docker run --env COGNITO_REGION --env COGNITO_ACCESS_ID --env COGNITO_ACCESS_KEY ghcr.io/hackforla/homeuniteus/api:latest "pytest --mode=release"
-  build-api:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: docker/setup-buildx-action@v1
-      - name: Build API Image
-        run: |
-          docker build -t api:latest ./api
-          docker save api:latest -o api_image.tar
-      - uses: actions/upload-artifact@v3
-        with:
-          name: api_image
-          path: api_image.tar
-          retention-days: 7
   build-app:
     runs-on: ubuntu-latest
     steps:
@@ -106,17 +68,18 @@ jobs:
       COGNITO_ACCESS_ID: ${{ secrets.COGNITO_ACCESS_ID }}
       COGNITO_ACCESS_KEY: ${{ secrets.COGNITO_ACCESS_KEY }}
     steps:
-      - name: Download API Image Artifact
-        uses: actions/download-artifact@v3
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v1
         with:
-          name: api_image
-          path: .
-      - name: Load API Image
-        run: docker load -i api_image.tar
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Pull API Image
+        run: docker pull ghcr.io/hackforla/homeuniteus/api:latest
       - name: Run Debug Tests
-        run: docker run api:latest pytest
+        run: docker run ghcr.io/hackforla/homeuniteus/api:latest pytest
       - name: Run Release Tests
-        run: docker run --env COGNITO_REGION --env COGNITO_ACCESS_ID --env COGNITO_ACCESS_KEY api:latest "pytest --mode=release"
+        run: docker run --env COGNITO_REGION --env COGNITO_ACCESS_ID --env COGNITO_ACCESS_KEY ghcr.io/hackforla/homeuniteus/api:latest "pytest --mode=release"
   test-app:
     runs-on: ubuntu-latest
     needs: [build-app, build-api]
@@ -145,8 +108,8 @@ jobs:
           docker run --network huu-test-network -d --name backend --env ENV='development' --env HOST=0.0.0.0 api:latest
           docker run --network huu-test-network -d --name frontend_nomock --env VITE_HUU_API_BASE_URL=http://backend:api app:latest-test "npx vite --host"
           sleep 10
-          docker exec backend curl http://localhost:8080/api/auth/signup/host -H "accept: application/json" -H "Content-Type: application/json" -d "{\"email\": \"nottarealemail@gmail.com\", \"password\": \"alskdf454$Adfa\"}"
-          docker run --network huu-test-network --name cypress_tests_nomock --env CYPRESS_BASE_URL="http://frontend_nomock:4040" --env CYPRESS_USE_MOCK=false --env CYPRESS_REAL_EMAIL='nottarealemail@gmail.com' --env CYPRESS_REAL_PASSWORD='alskdf454$Adfa' app:latest-test "npx cypress run"
+          docker exec backend curl http://localhost:8080/api/auth/signup/host -H "accept: application/json" -H "Content-Type: application/json" -d "{\"email\": \"nottarealemail@gmail.com\", \"password\": \"alskdf454#Adfa\"}"
+          docker run --network huu-test-network --name cypress_tests_nomock --env CYPRESS_BASE_URL="http://frontend_nomock:4040" --env CYPRESS_USE_MOCK=false --env CYPRESS_REAL_EMAIL='nottarealemail@gmail.com' --env CYPRESS_REAL_PASSWORD='alskdf454#Adfa' app:latest-test "npx cypress run"
       - name: Wait for Test to Complete
         run: |
           while true; do
